--- a/www/index.html
+++ b/www/index.html
@@ -36,9 +36,9 @@
     <script src="app/app.js"></script>
     
     <!-- products -->
-    <script src="app/products/products-ctrl.js"></script>
-    <script src="app/products/directives/apptInfo/appt-info-directive.js"></script>    
-    <script src="app/products/directives/priceDeadline/price-deadline-directive.js"></script> 
+    <script src="app/products/products.controller.js"></script>
+    <script src="app/products/directives/apptInfo/appt-info.directive.js"></script>    
+    <script src="app/products/directives/priceDeadline/price-deadline.directive.js"></script> 
 
     <!-- instagram -->
     <script src="app/instagram/instagram.controller.js"></script>
@@ -71,7 +71,7 @@
     <script src="app/shared/services/utilities/formatter.service.js"></script> 
 
     <!-- shared directives -->
-    <script src="app/shared/directives/productDescriptionContainer/product-desc-container-directive.js"></script> 
+    <script src="app/shared/directives/productDescriptionContainer/product-desc-container.directive.js"></script> 
 
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
