--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,8 @@
 
     <!-- bookings -->
     <script src="app/bookings/bookings.controller.js"></script>
+    <script src="app/bookings/directives/bookingAddressBtn/booking-address-btn.directive.js"></script>
+    <script src="app/bookings/directives/scrollSelector/scroll-selector.directive.js"></script>
 
     <!-- complete -->
     <script src="app/complete/complete.controller.js"></script>    
