--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,9 @@
 
     <!-- settings -->
     <script src="app/settings/settings.controller.js"></script>    
+    <script src="app/settings/directives/settingsAddressItem/settings-address-item.directive.js"></script>    
+    <script src="app/settings/directives/settingsEmailPhoneItem/settings-email-phone-item.directive.js"></script> 
+    <script src="app/settings/directives/policiesContainer/policies-container.directive.js"></script> 
 
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
