add more directive in instagram page

--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,9 @@
 
     <!-- instagram -->
     <script src="app/instagram/instagram.controller.js"></script>
+    <script src="app/instagram/directives/userInfo/user-info.directive.js"></script>
+    <script src="app/instagram/directives/instagramContainer/instagram-container.directive.js"></script>
+    <script src="app/instagram/directives/productInfoContainer/product-info-container.directive.js"></script>
 
     <!-- bookings -->
     <script src="app/bookings/bookings.controller.js"></script>
