--- a/www/app/instagram/instagram.html
+++ b/www/app/instagram/instagram.html
@@ -1,27 +1,7 @@
 <ion-view view-title="Details" ng-controller="ProductDetailsCtrl as vm">
-  <div class="product-info-container">
-    <div class="product-text-container">
-      <div class="product-name big-header">{{vm.product.name}}</div>
-      <div class="product-hashtags small-header">{{vm.product.hashtags}}</div>
-    </div>
-  </div>
+  <product-info-container product="vm.product"></product-info-container>
   <ion-content class="instagram-list" on-swipe-down="vm.toProducts()">
-    <div class="instagram-container" ng-repeat="instagram in vm.instagrams">
-    	<div class="image-container" ng-style="{'background-image':'url({{instagram.image}})'}">
-            <div id="bottom-shader"></div>
-    		<div class="user-info-container">
-    			<div class="user-profile-image">
-    				<div class="img-small-circle" ></div>
-    				<div class="img-circle" ng-style="{'background-image':'url({{instagram.author.profileImage}})'}"></div>
-    			</div>
-    			<div class="user-name">{{instagram.author.name}}</div>
-    		</div>
-    	</div>
-    	<div class="user-text-container">
-    		<span class="comments">{{instagram.comments}}&nbsp;</span>
-    		<span class="hashtags">{{instagram.hashtags}}</span>
-    	</div>
-    </div>
+    <instagram-container instagram="instagram" ng-repeat="instagram in vm.instagrams"></instagram-container>
   </ion-content>
   <div class="static-footer">
     <div class="btn-container">
