cleanup products controller to remove future appointment logic

--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,9 @@
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
 
+    <!-- firebase -->
+    <script src="app/shared/firebase/firebase-appointments.service.js"></script>    
+
     <!-- services -->
     <script src="app/shared/services/user-selection.service.js"></script>    
     <script src="app/shared/services/local-storage.service.js"></script>    
