[Beck] setup skeleton for web branch

--- a/www/app/shared/directives/productDescriptionContainer/product-desc-container-template.html
+++ b/www/app/shared/directives/productDescriptionContainer/product-desc-container-template.html
@@ -1,5 +1,4 @@
-<div class="product-desc-container">
+<div>
     <div class="big-header">{{product.name}}</div>
-  	<div class="small-header">{{product.hashtags}}</div>
   	<div class="product-description">{{product.description}}</div>
 </div>
