--- a/www/app/bookings/directives/userInfoModal/newUserForm/new-user-form.html
+++ b/www/app/bookings/directives/userInfoModal/newUserForm/new-user-form.html
@@ -7,7 +7,7 @@
 	<div>Last Name</div>
 	<input required type="phone" ng-model="user.phoneNumber"/>
 	<div>Mobile Phone Number</div>
-	<button>Sign Up With Phone Number</button>
+	<button ng-click="onClick()">Sign Up With Phone Number</button>
 	<div>A Confirmation Code will be sent via SMS. Standard messaging rates apply.</div>
 
 </div>
