--- a/www/app/bookings/directives/userInfoModal/signInForm/sign-in-form.html
+++ b/www/app/bookings/directives/userInfoModal/signInForm/sign-in-form.html
@@ -3,6 +3,6 @@
 	<div>No more having to remember passwords.</div>
 	<input required type="phone" ng-model="user.phoneNumber"/>
 	<div>Mobile number with area code</div>
-	<button>Sign In With Phone Number</button>
+	<button ng-click="onClick()">Sign In With Phone Number</button>
 	<div>A Confirmation Code will be sent via SMS. Standard messaging rates apply.</div>
 </div>
