--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,9 @@
     <script src="app/bookings/directives/userInfoModal/newUserForm/new-user-form.directive.js"></script>
     <script src="app/bookings/directives/userInfoModal/signInForm/sign-in-form.directive.js"></script>
 
+    <!-- phone verification form -->
+    <script src="app/bookings/directives/phoneVerificationForm/phone-verification-form.directive.js"></script>
+
     <!-- place order modal -->
     <script src="app/bookings/directives/placeOrderModal/place-order-form.directive.js"></script>
 
